--- a/codigo/GestionHotelera/Views/Home/Index.cshtml
+++ b/codigo/GestionHotelera/Views/Home/Index.cshtml
@@ -1,8 +1,14 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewBag.Title = "Inicio";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="text-center mt-5">
+    <h1 class="display-4">Bienvenido al Sistema de Gestión Hotelera</h1>
+    <p class="lead">Seleccione una opción para continuar</p>
+
+    <div class="mt-4">
+        <a class="btn btn-primary btn-lg me-3" href="@Url.Action("Login", "Cuenta")">Iniciar Sesión</a>
+        <a class="btn btn-success btn-lg" href="@Url.Action("Register", "Cuenta")">Registrarse</a>
+    </div>
 </div>
