--- a/codigo/GestionHotelera/wwwroot/css/site.css
+++ b/codigo/GestionHotelera/wwwroot/css/site.css
@@ -20,3 +20,25 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+
+/* Estilos aplicados a vistas de login */
+html {
+    font-size: 14px;
+}
+
+@media (min-width: 768px) {
+    html {
+        font-size: 16px;
+    }
+}
+
+/* Focus accesible */
+.btn:focus, .btn:active:focus, .form-control:focus {
+    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
+
+/* Espacio para footer */
+body {
+    margin-bottom: 60px;
+}
